Issue #3038 styled leaderbord without scrollbar

--- a/src/css/airvis.css
+++ b/src/css/airvis.css
@@ -30,20 +30,23 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 .airvis-window { color: #333333; display: block; font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; font-size: 14px; line-height: 20px; position: absolute;}
 .airvis-window-header { background-color: rgba(0,47,64,.93); padding: 0 11px; height: 40px;}
 .airvis-window-title { color: #ffffff; display: block; float: left; font-size: 18px; font-weight: bold; line-height: 40px; padding: 0 11px; text-rendering: optimizelegibility;}
-.airvis-window-close { float: right; outline: 0 none; display: block; width: 20px; height: 20px; background: url("icon-close.png") 0 0 no-repeat; margin-top: 10px;}
-.airvis-window-close-absolute { position: absolute; outline: 0 none; display: block; top: 5px; right: 5px; width: 20px; height: 20px; background: url("icon-close.png") 0 0 no-repeat;}
-.airvis-window-close:hover { background-color: #303030; text-decoration: underline;}
+.airvis-window-close { float: right; outline: 0 none; display: block; width: 24px; height: 24px; background: url(../img/widget_control.png) -48px -24px no-repeat; margin-top: 8px; margin-right: -2px;}
+.airvis-window-close-absolute { position: absolute; outline: 0 none; display: block; top: 8px; right: 8px; width: 24px; height: 24px; background: url(../img/widget_control.png) -48px -24px no-repeat;}
+.airvis-window-close:hover,
+.airvis-window-close-absolute:hover { background-position: -24px 0}
 .airvis-window-content { background-color: rgba(0,47,64,.75); position: relative; overflow: auto;}
-.airvis-window-content-absolute { bottom: 0; left: 0; position: absolute; right: 0; top: 0px;}
+.airvis-window-content-absolute { bottom: 0; left: 0; position: absolute; right: 0; top: 0px; overflow: visible;}
 .airvis-transparent { background-color: transparent;}
 .airvis-window-resize { position: absolute;}
 .airvis-resize-right { bottom: 0; cursor: e-resize; right: -8px; top: 0; width: 10px;}
 .airvis-resize-bottom { bottom: -8px; cursor: s-resize; height: 10px; left: 0; right: 0;}
 .airvis-resize-bottom-right { bottom: -8px; cursor: se-resize; height: 10px; right: -8px; width: 10px;}
 
-.airvis-window-ec-absolute { position: absolute; outline: 0 none; display: block; top: 5px; right: 10px; width: 20px; height: 20px; }
-.airvis-expand { background-color: #ff0000; }
-.airvis-collapse { background-color: #00ff00; }
+.airvis-window-ec-absolute { position: absolute; outline: 0 none; display: block; top: -32px; right: 38px; width: 24px; height: 24px; background: url(../img/widget_control.png) no-repeat;}
+.airvis-collapse { background-position: -24px -24px}
+.airvis-collapse:hover { background-position: -24px 0}
+.airvis-expand { background-position: 0 -24px}
+.airvis-expand:hover { background-position: 0 0}
 
 
 /* table with fixed header in ufosTable widget */
@@ -53,17 +56,43 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 .arvis-table-head-surrogate { width: 100%; height: 42px; background-color: rgba(0,47,64,.50);}
 .airvis-table-with-fixed-header table th { padding: 0; border: 0; font-size: 12px; line-height: 15px; text-align: left; font-weight: normal;}
 .airvis-table-with-fixed-header th div.th_wrap { position: absolute; text-align: center; top: -42px; height: 42px;  }
-.airvis-table-with-fixed-header th div.th_wrap div { position: absolute; bottom: 5px; left: 0; right: 0; padding: 0 10px;}
+.airvis-table-with-fixed-header th + th div.th_wrap { border-left: 1px solid rgba(0,47,64,.15)}
+.airvis-table-with-fixed-header th div.th_wrap div { position: absolute; bottom: 5px; left: 0; right: 0; padding: 0}
 .airvis-table-with-fixed-header tr.airvis-hidden-header th > div { height: 0; overflow-y: hidden; position: static; white-space: nowrap;}
 
 
 /* redefine font sizes in airvis tables */
 .airvis-window table tbody tr:nth-child(2n+2) { background-color: rgba(0,47,64,.35);}
-.airvis-window table tbody td { /*font-size: 10px;*/ line-height: 20px; padding: 2px 10px;}
+.airvis-window table tbody td { /*font-size: 10px;*/ line-height: 20px; padding: 0 10px; text-align: center; vertical-align: top;}
+.airvis-window table tbody tr:first-child td { padding-top: 8px;}
 .airvis-window table tbody td + td { border-left: 1px solid rgba(0,47,64,.15)}
 
-.airvis-window th.airvis-checkbox, .airvis-window td.airvis-checkbox { padding: 0; text-align: center; width: 32px;}
-.airvis-window th.airvis-checkbox .checkbox, .airvis-window td.airvis-checkbox .checkbox { /*margin-bottom: -5px;*/ margin-top: 5px;}
+.airvis-window th.airvis-checkbox, 
+.airvis-window td.airvis-checkbox { padding: 0; text-align: center; width: 30px;}
+.airvis-window th.airvis-checkbox > div, 
+.airvis-window td.airvis-checkbox > div { width: 30px;}
+.airvis-window th.airvis-checkbox > div div { padding: 0;}
+.airvis-window th.airvis-checkbox .checkbox, 
+.airvis-window td.airvis-checkbox .checkbox { /*margin-bottom: -5px;*/ margin-top: 4px;}
+
+.airvis-window table .pilot-number,
+.airvis-window table .pilot-number div.th_wrap { width: 29px; padding: 0;}
+.airvis-window table th.pilot-name,
+.airvis-window table .pilot-name div.th_wrap { width: 159px; text-align: center;}
+.airvis-window table .pilot-name { text-align: left;}
+.airvis-window table th.dist-to-goal,
+.airvis-window table .dist-to-goal div.th_wrap { width: 59px;}
+.airvis-window table th.alt,
+.airvis-window table .alt div.th_wrap { width: 39px;}
+.airvis-window table th.gspd,
+.airvis-window table .gspd div.th_wrap,
+.airvis-window table th.vspd,
+.airvis-window table .vspd div.th_wrap { width: 49px;}
+.airvis-window table th.pilot-nation,
+.airvis-window table .pilot-nation div.th_wrap { width: 69px;}
+
+.airvis-window table .pilot-name { vertical-align: top;}
+.airvis-window table .pilot-name .countryicon-sprite { margin-left: 10px;}
 
 
 /* Livetracking controls */
